5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1582_1333.log
== TEST (2019-03-18 08:24:17) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 08:24:27) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.13423
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:15:18) 
-- CODE:
expressao =30-3**2+8//2*10 
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:15:26) 
-- CODE:
expressao =30-3**2+8//2*10 
print(expressao)
-- EXECUTION TIME:
0.160929
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:15:40) 
-- CODE:
expressao =(30-3**2+8//2*10) 
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:15:43) 
-- CODE:
expressao =(30-3**2+8//2*10) 
print(expressao)
-- EXECUTION TIME:
0.136573
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:15:55) 
-- CODE:
expressao = (30-3**2+8//2*10) 
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:16:21) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//2*10 )
-- EXECUTION TIME:
0.18048
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:16:43) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//2*10)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:16:50) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//2*10)
-- EXECUTION TIME:
0.137022
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:17:45) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2)+(8//2)*10)
-- ERROR:
File "XXXX", line 2
    print(30-3**2)+(8//2)*10)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:18:04) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.216778
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:18:30) 
-- CODE:
expressao =30-3**2+8//2*10 
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
